[project]
name = "2048"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "mouseinfo==0.1.3",
    "pillow==8.4.0",
    "pyautogui==0.9.53",
    "pygame==2.1.0",
    "pygetwindow==0.0.9",
    "pymsgbox==1.0.9",
    "pyperclip==1.8.2",
    "pyrect==0.1.4",
    "pyscreeze==0.1.28",
    "pytweening==1.0.4",
]
